my-files/day3_deployment_update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: giropops
  name: giropops4
spec:
  replicas: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: giropops
  template:
    metadata:
      labels:
        app: giropops
        dc: UK
    spec:
      containers:
      - image: nginx:1.18
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
