my-files/day4_pod_secret_env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-secret-env
spec:
  containers:
  - image: busybox
    name: busy-secret-env
    command:
      - sleep
      - "3600"
