my-files/pod_ltda.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-limited
spec:
  containers:
  - name: my-container
    image: nginx
