my-files/giropops_svc_lb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: giropops
  name: giropops
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30000
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: giropops
  sessionAffinity: None
  type: LoadBalancer
