my-files/day5_app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: app-ingress
spec:
  rules:
  - host: wallison0091c.mylabserver.com # Mude para o seu endereço dns
    http:
      paths:
      - backend:
          service:
            name: appsvc1
            port:
              number: 80
        path: /app1
        pathType: Prefix
      - backend:
          service:
            name: appsvc2
            port:
              number: 80
        path: /app2
        pathType: Prefix
